# heliondb

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  api.html  architecture.html  docker-compose.yml  index.html  print.html  protocol.html  searcher-c2a407aa.js  searchindex-7a5e4ae9.js  searchindex-d0ce92a3.js  toc-64e7334c.js  toc.html  user-guide.html
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/: API.md  ARCHITECTURE.md  PROTOCOL.md  USER_GUIDE.md  book.toml
docs/src/: SUMMARY.md  api.md  architecture.md  build.md  contributing.md  deployment.md  index.md  protocol.md  sql-reference.md  structured-query.md  troubleshooting.md  user-guide.md
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/client/: cert.rs  conn.rs  mod.rs  output.rs  repl.rs
src/executor/: eval.rs  ops.rs
src/protocol/: auth.rs  messages.rs  mod.rs  structured.rs
src/server/: mod.rs  quic.rs  session.rs
src/sql/: mod.rs  parser.rs  planner.rs
src/storage/: btree.rs  catalog.rs  checkpoint.rs  engine.rs  engine_trait.rs  mod.rs  mvcc.rs  permissions.rs  table.rs  types.rs  users.rs  wal.rs
src/storage/engines/: disk.rs  memory.rs
tests/: integration.rs  queries.rs  recovery.rs  structured.rs
tests/common/: mod.rs
